# AsyncArchitecture

./: .gitignore
Homework1/: Требования и бизнес-цепочки.md
accounting_service/: main.py
accounting_service/app/: db.py  kafka_producer.py
accounting_service/event_handling/: handlers.py  handling_loop.py
auth_service/: main.py  pyproject.toml
auth_service/app/: constants.py  db.py  kafka_setup.py  model.py
auth_service/app/auth/: auth_bearer.py
auth_service/app/event/: event.py
schema_registry/python/: __init__.py  all_events.py  event.py  resolve_event.py
schema_registry/schemas/auth/user_created/: 1.json
schema_registry/schemas/task/task_created/: 1.json
task_service/: event_handler.py  main.py  pyproject.toml
task_service/app/: db.py  kafka_setup.py  model.py
task_service/app/event/: event.py
task_service/event_handling/: handlers.py  handling_loop.py
