[tool.poetry]
name = "task-service"
version = "0.1.0"
description = ""
authors = ["pvasilyev001"]
readme = "README.md"
packages = [{include = "task_service"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"
httpx = "^0.24.1"
kafka-python = "^2.0.2"
sqlalchemy = "^2.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
